--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,18 @@ body {
   max-width: 100%;
 }
 
+@keyframes spin { 
+  100% { 
+    transform:rotate(-360deg); 
+  } 
+}
+
+.astronaut img {
+  width: 30px;
+  position: absolute;
+  animation: spin 4s linear infinite;
+}
+
 .score {
   position: absolute;
   right: 0;
